...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sca-v2-hje">
                                <rect key="frame" x="0.0" y="66" width="94" height="30"/>
                                <color key="backgroundColor" red="0.24028345942497253" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="选图"/>
                                <connections>
                                    <action selector="shareAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nS3-h1-KR2"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlQ-J7-wu8">
                                <rect key="frame" x="94" y="66" width="93.5" height="30"/>
...
