...
    if (version >= 800 && version <= 802)
    {
        return [albumName isEqualToString:@"最近添加"] || [albumName isEqualToString:@"Recently Added"];
    }
    else
    {
        return [albumName isEqualToString:@"Camera Roll"] || [albumName isEqualToString:@"相机胶卷"] || [albumName isEqualToString:@"所有照片"] || [albumName isEqualToString:@"All Photos"];
    }
}
// 设置相册目录model参数
- (IJSAlbumModel *)modelWithResult:(id)result name:(NSString *)name
{
    IJSAlbumModel *model = [[IJSAlbumModel alloc] init];
...
